--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="profile">
 			<img src="images/man.png" alt="">
 			<h2>Hello.</h2>
-			<p class="bio">I am an Front-End Web Developer.
+			<p class="bio">I am a Front-End Web Developer.
 				I focus on attractive Web Design, I keep it simple.</p>
 		</div>
 		<hr>
